# bulls_and_cows_skeleton

./: CMakeLists.txt  LICENSE  README.md  game_options.txt
.github/workflows/: main.yml
src/Projet/: ConsoleApplication2.cpp
src/bulls_and_cows_lib/: CMakeLists.txt  board.cpp  board.hpp  game.cpp  game.hpp  game_options.cpp  game_options.hpp  game_solver.cpp  game_solver.hpp  input.cpp  input.hpp  main_menu.cpp  main_menu.hpp  random.cpp  random.hpp
src/bulls_and_cows_prg/: CMakeLists.txt  bulls_and_cows_prg_main.cpp
src/bulls_and_cows_ut/: CMakeLists.txt  board_test.cpp  game_options_test.cpp  game_solver_test.cpp  input_test.cpp  main_menu_test.cpp  random_test.cpp
thirdparties/: CMakeLists.txt
